# PromptEvolver

./: .env.example  .gitignore  PLAN.md  README.md  README_CN.md  pyproject.toml  requirements.txt
demos/: README.md  index.html
demos/git-diff-viewer/: index.html
demos/prompt-diff-viewer/: index.html
demos/prompt-evolver-visualization/: index.html  review-dashboard.html  static-report.html
demos/prompt-optimization-visualization/: audit-workbench.html  index.html
examples/: prompt.example.md  prompt.md  prompt_jxb_v0.md  prompt_jxb_v1.md  prompt_jxb_v2.md  prompt_jxb_v3.md  prompt_jxb_v4.md  prompt_jxb_v5.md  task.example.json  task.json
skills/codex-prompt-optimizer/: SKILL.md
skills/codex-prompt-optimizer/agents/: openai.yaml
skills/codex-prompt-optimizer/references/: input-json-format.md  judge-subagent-prompt.md  judgement-schema.json
skills/codex-prompt-optimizer/scripts/: validate_input_json.py
skills/prompt-evolver/: SKILL.md
skills/prompt-evolver/agents/: openai.yaml
skills/prompt-evolver/references/: input-json-format.md  judge-subagent-prompt.md  judgement-schema.json
src/codex_prompt_optimizer/: __init__.py  cli.py  config.py  errors.py  model.py  storage.py  workflow.py
src/prompt_evolver/: __init__.py  cli.py  config.py  errors.py  model.py  prompt_diff_server.py  renderer.py  schemas.py  strict.py  workflow.py
tests/: test_cli_contract.py  test_config.py  test_judgement.py  test_prompt_diff_server.py  test_propose.py  test_renderer.py  test_skill_input_json_validator.py  test_strict_workflow.py  test_workflow_files.py
(+1 files in other folders)
