[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-prompt-optimizer"
version = "0.1.0"
description = "A Codex-orchestrated prompt optimization CLI using Mustache cases, DSPy target model calls, and file-based judgements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "chevron>=0.14",
  "dspy-ai>=2.5",
]

[project.scripts]
codex-prompt-opt = "codex_prompt_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
