[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-evolver"
version = "0.1.0"
description = "A prompt optimization CLI using Mustache cases, target model calls, and file-based judgements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "chevron>=0.14",
  "dspy-ai>=2.5",
]

[project.scripts]
prompt-evolver = "prompt_evolver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prompt_evolver = ["static/prompt_diff_viewer/index.html"]
